--- a/src/template/pages/testimonials/_testimonial-body.html
+++ b/src/template/pages/testimonials/_testimonial-body.html
@@ -1,6 +1,7 @@
 <!--Start Testimonial Body-->
 <div class="testimonial-body">
   <div class="container">
+    <!--    Header-->
     <div class="row justify-content-center">
       <div class="col-sm-11 col-md-9 col-lg-8">
         <h2 class="h3 text-center">
@@ -10,7 +11,390 @@
       </div>
     </div>
 
+    <!--    Content-->
+    <div class="row align-content-center align-items-center justify-content-center">
+      <!--      1- Group-->
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded.
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--      2- Group-->
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--      3- Group-->
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app.
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--      4- Group-->
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--      5- Group-->
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--      6- Group-->
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 col-lg-6">
+        <div class="content text-center text-sm-left">
+          <div class="row no-gutters justify-content-center">
+            <div class="col-4 col-sm-auto">
+              <img src="images/testimonial-content.png" class="person" height="114" width="114" />
+            </div>
+            <div class="col-sm">
+              <p class="span">
+                "Guilherme is an extremely skilled designer with a lot of experience. He came up with a unique and crips
+                design for our elearning app. All the people we showed the design to, were extremely impressed.
+                Guilherme has great communication skills and is very open-minded. He is truly committed and seeks to get
+                the best possible design done, not only for client's sake but because it is his own concern to create
+                great design. Thank you for your hard work on this!"
+              </p>
+              <div class="row no-gutters justify-content-center justify-content-sm-start  align-items-baseline">
+                <div class="col-auto">
+                  <img src="images/germany-flag.png" class="mr-2" height="17" width="24" />
+                </div>
+                <div class="col-auto col-sm">
+                  <div class="mb-1 font-weight-bold text-main-color">
+                    Christian M. Leupold-Wendling
+                  </div>
+                  <div class="country">
+                    Jurafuchs - Berlin, Germany
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
   </div>
 </div>
+
 <!--End Testimonial Body-->
