--- a/src/template/pages/portfolio/_projects-involved.html
+++ b/src/template/pages/portfolio/_projects-involved.html
@@ -1,6 +1,7 @@
 <!--Start Project Involved-->
 <div class="projects-involved">
   <div class="container">
+
     <!--    Head-->
     <h2 class="h3 text-center">Some projects and companies that I was involved:</h2>
 
@@ -16,7 +17,7 @@
               <a class="span font-weight-bold active" href="">Mobile Apps</a>
             </li>
             <li class="list-inline-item">
-              <a class="span font-weight-bold" href="">Web Apps</a>
+              <a class="span font-weight-bold" data-filter=".web-apps">Web Apps</a>
             </li>
             <li class="list-inline-item">
               <a class="span font-weight-bold" href="">Web Sites</a>
@@ -39,30 +40,30 @@
         </div>
       </div>
     </div>
-    <!--    <div class="content-lock"></div>-->
+
     <!--    project content-->
     <!--      1- Group-->
     <div class="row justify-content-between align-items-center">
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix web-apps">
           <img src="images/project-app-google.png" height="38" width="112" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix web-apps">
             <img src="images/project-app-mercedes.png" height="70" width="121" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix web-apps">
           <img src="images/project-app-ibm.png" height="38" width="96" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix web-apps">
             <img src="images/project-app-ford.png" height="50" width="130" />
           </div>
         </a>
@@ -71,50 +72,50 @@
       <!--      2- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-bcg.png" height="36" width="88" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-reebok.png" height="26" width="121" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-cuisinart.png" height="24" width="140" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-opera.png" height="48" width="132" />
         </div>
       </div>
 
       <!--      3- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-indeed.png" height="36" width="134" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-jura.png" height="26" width="136" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-inventti.png" height="37" width="146" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-icarus.png" height="37" width="146" />
           </div>
         </a>
@@ -123,28 +124,28 @@
       <!--      4- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-schoolaz.png" height="42" width="132" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-greenback.png" height="46" width="162" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-agco.png" height="37" width="146" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-buildfire.png" height="32" width="130" />
           </div>
         </a>
@@ -153,28 +154,28 @@
       <!--      5- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-crewhu.png" height="52" width="120" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-centegix.png" height="36" width="154" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-smartwash.png" height="36" width="144" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-liveglam.png" height="66" width="174" />
           </div>
         </a>
@@ -183,26 +184,26 @@
       <!--      6- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-educate.png" height="34" width="152" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-HighTimes.png" height="38" width="146" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-rockout.png" height="40" width="166" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-ombulabs.png" height="38" width="154" />
           </div>
         </a>
@@ -210,22 +211,22 @@
 
       <!--      7- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-cl.png" height="50" width="158" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-MagicCo.png" height="34" width="136" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-DTL.png" height="30" width="160" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-notify.png" height="48" width="144" />
         </div>
       </div>
@@ -233,51 +234,51 @@
       <!--      8- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-drool.png" height="38" width="110" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-lookup.png" height="39" width="129" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-schoolofrock.png" height="58" width="154" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-myfed.png" height="58" width="110" />
         </div>
       </div>
 
       <!--      9- Group-->
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-cleared.png" height="36" width="144" />
         </div>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-beauty-squar.png" height="96" width="74" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content">
+          <div class="content mix ">
             <img src="images/project-app-plannista.png" height="45" width="148" />
           </div>
         </a>
       </div>
       <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked">
+        <div class="content-locked mix ">
           <img src="images/project-app-last-wish.png" height="36" width="127" />
         </div>
       </div>
