add a new page items

--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -24,6 +24,9 @@
 @import "components/portfolio-header";
 @import "components/projects-involved";
 
+// Portfolio Items Pages
+@import "components/portfolio-header-item";
+
 //Testimonials
 @import "components/testimonial-body";
 
