--- a/src/template/pages/portfolio/_projects-involved.html
+++ b/src/template/pages/portfolio/_projects-involved.html
@@ -17,7 +17,7 @@
               <a class="span font-weight-bold active" href="">Mobile Apps</a>
             </li>
             <li class="list-inline-item">
-              <a class="span font-weight-bold" data-filter=".web-apps">Web Apps</a>
+              <a class="span font-weight-bold" href>Web Apps</a>
             </li>
             <li class="list-inline-item">
               <a class="span font-weight-bold" href="">Web Sites</a>
