add a new section

--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -26,6 +26,9 @@
 
 // Portfolio Items Pages
 @import "components/portfolio-header-item";
+@import "components/mobility";
+@import "components/uxd-comment";
+@import "components/gallery-portfolio";
 
 //Testimonials
 @import "components/testimonial-body";
