--- a/src/template/portfolio-item.html
+++ b/src/template/portfolio-item.html
@@ -13,8 +13,9 @@
   @@include('./components/_navbar.html')
 
   @@include('./pages/portfolio-item/_portfolio-header-item.html')
-
-
+  @@include('./pages/portfolio-item/_mobility.html')
+  @@include('./pages/portfolio-item/_uxd-comment.html')
+  @@include('./pages/portfolio-item/_gallery-portfolio.html')
 
   @@include('./components/_getting-touch.html')
 
