--- a/src/template/pages/portfolio/_projects-involved.html
+++ b/src/template/pages/portfolio/_projects-involved.html
@@ -1,288 +1,345 @@
 <!--Start Project Involved-->
 <div class="projects-involved">
   <div class="container">
-
     <!--    Head-->
-    <h2 class="h3 text-center">Some projects and companies that I was involved:</h2>
+    <h2 class="h3 text-center">
+      Some projects and companies that I was involved:
+    </h2>
 
     <!--    navbar project-->
     <div class="row align-items-baseline">
       <div class="col-auto">
-        <div class="span text-grey font-weight-semi-bold">Filter by project:</div>
+        <div class="span text-grey font-weight-semi-bold">
+          Filter by project:
+        </div>
       </div>
+
       <div class="col-auto">
         <div class="nav-projects">
           <ul class="list-inline">
-            <li class="list-inline-item">
-              <a class="span font-weight-bold active" href="">Mobile Apps</a>
+            <li data-filter="all" class="list-inline-item">
+              <button class="btn span font-weight-bold">All</button>
             </li>
-            <li class="list-inline-item">
-              <a class="span font-weight-bold" href>Web Apps</a>
+            <li data-filter=".mobile-apps" class="list-inline-item active">
+              <button class="btn span font-weight-bold">Mobile Apps</button>
             </li>
-            <li class="list-inline-item">
-              <a class="span font-weight-bold" href="">Web Sites</a>
+            <li data-filter=".web-apps" class="list-inline-item">
+              <button class="btn span font-weight-bold">Web Apps</button>
             </li>
-            <li class="list-inline-item">
-              <a class="span font-weight-bold" href="">Brands</a>
+            <li data-filter=".web-sites" class="list-inline-item">
+              <button class="btn span font-weight-bold">Web Sites</button>
             </li>
-            <li class="list-inline-item">
-              <a class="span font-weight-bold" href="">Misc</a>
+            <li data-filter=".brands" class="list-inline-item">
+              <button class="btn span font-weight-bold">Brands</button>
+            </li>
+            <li data-filter=".misc" class="list-inline-item">
+              <button class="btn span font-weight-bold">Misc</button>
             </li>
           </ul>
         </div>
       </div>
 
       <div class="col-auto ml-lg-auto">
-
         <div class="span text-grey">
-          <input type="checkbox" class="mr-2">
+          <input type="checkbox" id="toggle-lock-projects" class="mr-2" />
           Hide Confidential Engagement Projects
         </div>
       </div>
     </div>
 
     <!--    project content-->
-    <!--      1- Group-->
-    <div class="row justify-content-between align-items-center">
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix web-apps">
+    <div class="row justify-content-between align-items-center container-filter">
+      <!--      1- Group-->
+      <div class="mix mobile-apps web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked">
           <img src="images/project-app-google.png" height="38" width="112" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <a href="#">
-          <div class="content mix web-apps">
-            <img src="images/project-app-mercedes.png" height="70" width="121" />
+      <div class="mix mobile-apps col-sm-6 col-md-4 col-lg-3">
+        <a href="portfolio-item.html" target="_blank">
+          <div class="content">
+            <img
+                    src="images/project-app-mercedes.png"
+                    height="70"
+                    width="121"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix web-apps">
+      <div class="mix web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-ibm.png" height="38" width="96" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix brands misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix web-apps">
+          <div class="content ">
             <img src="images/project-app-ford.png" height="50" width="130" />
           </div>
         </a>
       </div>
 
       <!--      2- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-bcg.png" height="36" width="88" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix  web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked">
           <img src="images/project-app-reebok.png" height="26" width="121" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix brands misc lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-cuisinart.png" height="24" width="140" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix mobile-apps web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-opera.png" height="48" width="132" />
         </div>
       </div>
 
       <!--      3- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-indeed.png" height="36" width="134" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-jura.png" height="26" width="136" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix web-apps misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-inventti.png" height="37" width="146" />
+          <div class="content ">
+            <img
+                    src="images/project-app-inventti.png"
+                    height="37"
+                    width="146"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-icarus.png" height="37" width="146" />
           </div>
         </a>
       </div>
 
       <!--      4- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix web-apps misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-schoolaz.png" height="42" width="132" />
+          <div class="content ">
+            <img
+                    src="images/project-app-schoolaz.png"
+                    height="42"
+                    width="132"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix brands col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-greenback.png" height="46" width="162" />
+          <div class="content ">
+            <img
+                    src="images/project-app-greenback.png"
+                    height="46"
+                    width="162"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-agco.png" height="37" width="146" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-buildfire.png" height="32" width="130" />
+          <div class="content ">
+            <img
+                    src="images/project-app-buildfire.png"
+                    height="32"
+                    width="130"
+            />
           </div>
         </a>
       </div>
 
       <!--      5- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-crewhu.png" height="52" width="120" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-centegix.png" height="36" width="154" />
+          <div class="content ">
+            <img
+                    src="images/project-app-centegix.png"
+                    height="36"
+                    width="154"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix web-sites misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-smartwash.png" height="36" width="144" />
+          <div class="content ">
+            <img
+                    src="images/project-app-smartwash.png"
+                    height="36"
+                    width="144"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-liveglam.png" height="66" width="174" />
+          <div class="content ">
+            <img
+                    src="images/project-app-liveglam.png"
+                    height="66"
+                    width="174"
+            />
           </div>
         </a>
       </div>
 
       <!--      6- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix web-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-educate.png" height="34" width="152" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-HighTimes.png" height="38" width="146" />
+          <div class="content ">
+            <img
+                    src="images/project-app-HighTimes.png"
+                    height="38"
+                    width="146"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix brands lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-rockout.png" height="40" width="166" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-ombulabs.png" height="38" width="154" />
+          <div class="content ">
+            <img
+                    src="images/project-app-ombulabs.png"
+                    height="38"
+                    width="154"
+            />
           </div>
         </a>
       </div>
 
       <!--      7- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix Misc lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-cl.png" height="50" width="158" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix mobile-apps misc lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-MagicCo.png" height="34" width="136" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix brands web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-DTL.png" height="30" width="160" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix mobile-apps Misc lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-notify.png" height="48" width="144" />
         </div>
       </div>
 
       <!--      8- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix brands web-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-drool.png" height="38" width="110" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
+          <div class="content ">
             <img src="images/project-app-lookup.png" height="39" width="129" />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
-          <img src="images/project-app-schoolofrock.png" height="58" width="154" />
+      <div class="mix web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
+          <img
+                  src="images/project-app-schoolofrock.png"
+                  height="58"
+                  width="154"
+          />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix mobile-apps brands lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-myfed.png" height="58" width="110" />
         </div>
       </div>
 
       <!--      9- Group-->
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix brands lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-cleared.png" height="36" width="144" />
         </div>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-beauty-squar.png" height="96" width="74" />
+          <div class="content ">
+            <img
+                    src="images/project-app-beauty-squar.png"
+                    height="96"
+                    width="74"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="mix web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
-          <div class="content mix ">
-            <img src="images/project-app-plannista.png" height="45" width="148" />
+          <div class="content">
+            <img
+                    src="images/project-app-plannista.png"
+                    height="45"
+                    width="148"
+            />
           </div>
         </a>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <div class="content-locked mix ">
+      <div class="mix Misc lock-projects col-sm-6 col-md-4 col-lg-3">
+        <div class="content-locked ">
           <img src="images/project-app-last-wish.png" height="36" width="127" />
         </div>
       </div>
-
     </div>
 
   </div>
