--- a/src/template/components/_platform.html
+++ b/src/template/components/_platform.html
@@ -1,7 +1,7 @@
 <!--Start Freelancing Platform-->
 <div class="container">
   <div class="platform">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center align-items-end">
       <div class="col-sm">
         <div class="upwork">
           <div>
