fix size of image secodary slider

--- a/src/template/components/_slider-secondary.html
+++ b/src/template/components/_slider-secondary.html
@@ -12,9 +12,10 @@
         <li data-target="#sliderSecondary" data-slide-to="5"></li>
         <li data-target="#sliderSecondary" data-slide-to="6"></li>
       </ol>
+
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="col-9">
+          <div class="col">
             <img src="images/slider_1.png" class="img-fluid d-none d-sm-block" />
           </div>
           <div class="carousel-caption">
@@ -28,7 +29,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="col-9">
+          <div class="col">
             <img src="images/slider_1.png" class="img-fluid d-none d-sm-block" />
           </div>
           <div class="carousel-caption">
@@ -42,7 +43,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <div class="col-9">
+          <div class="col">
             <img src="images/slider_1.png" class="img-fluid d-none d-sm-block" />
           </div>
           <div class="carousel-caption">
