--- a/src/template/components/_getting-touch.html
+++ b/src/template/components/_getting-touch.html
@@ -1,5 +1,5 @@
 <!--Start Getting Touch-->
-<div class="getting-touch">
+<div id="contact-us" class="getting-touch">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 col-lg-4">
