--- a/src/template/portfolio.html
+++ b/src/template/portfolio.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portfolio | GFD</title>
 
+
   @@include('./includes/_head.html')
 </head>
 <body>
@@ -22,5 +23,6 @@
   @@include('./includes/_footer.html')
 
   @@include('./includes/_scripts.html')
+  <script src="js/filter-projects.js"></script>
 </body>
 </html>
