--- a/src/template/components/_navbar.html
+++ b/src/template/components/_navbar.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="testimonials.html">Testimonials</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a data-scroll class="nav-link" href="#contact-us">Contact</a>
         </li>
       </ul>
       <!--      Start Social-->
