--- a/src/template/pages/testimonials/_testimonial-body.html
+++ b/src/template/pages/testimonials/_testimonial-body.html
@@ -11,10 +11,33 @@
       </div>
     </div>
 
+    <style>
+      .item-b {
+        background-color: #f2f2f2;
+        padding: 10px;
+        border: 2px solid #CCCCCC;
+        max-width: 1200px;
+        margin: 0 auto;
+        height: auto;
+        display: flex;
+        flex-flow: column wrap;
+      }
+      .item-f {
+        /*background-color: orange;*/
+        /*background-color: orange;*/
+        height: 500px;
+        width: 44%;
+        margin: 1%;
+        padding: 10px;
+      }
+    </style>
+
     <!--    Content-->
-    <div class="row align-content-center align-items-center justify-content-center">
+<!--    <div class="row align-content-center align-items-center justify-content-center">-->
+    <div class="item-b ">
       <!--      1- Group-->
-      <div class="col-md-10 col-lg-6">
+<!--      <div class="col-md-10 col-lg-6">-->
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -45,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -76,7 +99,7 @@
       </div>
 
       <!--      2- Group-->
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -107,7 +130,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -140,7 +163,7 @@
       </div>
 
       <!--      3- Group-->
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -168,7 +191,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -201,7 +224,7 @@
       </div>
 
       <!--      4- Group-->
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -232,7 +255,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -265,7 +288,7 @@
       </div>
 
       <!--      5- Group-->
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -296,7 +319,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -329,7 +352,7 @@
       </div>
 
       <!--      6- Group-->
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
@@ -360,7 +383,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-10 col-lg-6">
+      <div class="item-f">
         <div class="content text-center text-sm-left">
           <div class="row no-gutters justify-content-center">
             <div class="col-4 col-sm-auto">
