--- a/src/scss/components/_mobility.scss
+++ b/src/scss/components/_mobility.scss
@@ -5,19 +5,33 @@ Start Mobility*/
   @media (max-width: $max-sm) {
     padding: 30px 0 50px;
   }
+
   h2 {
+    font-size: 2rem;
     margin-bottom: 32px;
-    @media (min-width: $min-med) {
-      max-width: 333px;
+    //@media (min-width: $min-med) {
+    //  max-width: 333px;
+    //}
+    @media (max-width: $max-lg) {
+      font-size: 1.60rem;
     }
+
+    @media (max-width: $max-sm) {
+      font-size: 1.5rem;
+    }
+    @media (max-width: $max-xs) {
+      font-size: 1.25rem;
+    }
+
   }
 
   p {
+    font-size: 1rem;
     text-align: justify;
     line-height: 25px;
-    @media (min-width: $min-med) {
-      max-width: 305px;
-    }
+    //@media (min-width: $min-med) {
+    //  max-width: 305px;
+    //}
   }
 
   .mt-25 {
