fix image mobile issue

--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -4,6 +4,9 @@
 @import "layout/global";
 @import "layout/fonts";
 
+// Headroom Lib
+@import "lib/headroom";
+
 @import "components/button";
 @import "components/navbar";
 
