--- a/src/template/pages/portfolio-item/_mobility.html
+++ b/src/template/pages/portfolio-item/_mobility.html
@@ -21,8 +21,8 @@
         </div>
 
       </div>
-      <div class="col-md-6 col-lg-6 mt-25">
-        <img src="images/iPhone_X_Mockup.png" class="img-fluid" height="733" width="363" />
+      <div class="col-md-6 col-lg-5 mt-25">
+        <img src="images/iPhone_X_Mockup.png" class="img-fluid ml-4"  />
       </div>
     </div>
   </div>
