--- a/src/template/pages/portfolio/_projects-involved.html
+++ b/src/template/pages/portfolio/_projects-involved.html
@@ -17,9 +17,9 @@
       <div class="col-auto">
         <div class="nav-projects">
           <ul class="list-inline">
-            <li data-filter="all" class="list-inline-item">
-              <button class="btn span font-weight-bold">All</button>
-            </li>
+            <!--            <li data-filter="all" class="list-inline-item">-->
+            <!--              <button class="btn span font-weight-bold">All</button>-->
+            <!--            </li>-->
             <li data-filter=".mobile-apps" class="list-inline-item active">
               <button class="btn span font-weight-bold">Mobile Apps</button>
             </li>
@@ -58,20 +58,16 @@
       <div class="mix mobile-apps col-sm-6 col-md-4 col-lg-3">
         <a href="portfolio-item.html" target="_blank">
           <div class="content">
-            <img
-                    src="images/project-app-mercedes.png"
-                    height="70"
-                    width="121"
-            />
+            <img src="images/project-app-mercedes.png" height="70" width="121" />
           </div>
         </a>
       </div>
-      <div class="mix web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-ibm.png" height="38" width="96" />
         </div>
       </div>
-      <div class="mix brands misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
             <img src="images/project-app-ford.png" height="50" width="130" />
@@ -80,19 +76,19 @@
       </div>
 
       <!--      2- Group-->
-      <div class="mix web-sites col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
             <img src="images/project-app-bcg.png" height="36" width="88" />
           </div>
         </a>
       </div>
-      <div class="mix  web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps  web-apps lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked">
           <img src="images/project-app-reebok.png" height="26" width="121" />
         </div>
       </div>
-      <div class="mix brands misc lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands misc lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-cuisinart.png" height="24" width="140" />
         </div>
@@ -104,7 +100,7 @@
       </div>
 
       <!--      3- Group-->
-      <div class="mix web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-indeed.png" height="36" width="134" />
         </div>
@@ -116,14 +112,10 @@
           </div>
         </a>
       </div>
-      <div class="mix web-apps misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-apps misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-inventti.png"
-                    height="37"
-                    width="146"
-            />
+            <img src="images/project-app-inventti.png" height="37" width="146" />
           </div>
         </a>
       </div>
@@ -136,25 +128,17 @@
       </div>
 
       <!--      4- Group-->
-      <div class="mix web-apps misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-apps misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-schoolaz.png"
-                    height="42"
-                    width="132"
-            />
+            <img src="images/project-app-schoolaz.png" height="42" width="132" />
           </div>
         </a>
       </div>
-      <div class="mix brands col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-greenback.png"
-                    height="46"
-                    width="162"
-            />
+            <img src="images/project-app-greenback.png" height="46" width="162" />
           </div>
         </a>
       </div>
@@ -165,14 +149,10 @@
           </div>
         </a>
       </div>
-      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-buildfire.png"
-                    height="32"
-                    width="130"
-            />
+            <img src="images/project-app-buildfire.png" height="32" width="130" />
           </div>
         </a>
       </div>
@@ -188,57 +168,41 @@
       <div class="mix mobile-apps brands col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-centegix.png"
-                    height="36"
-                    width="154"
-            />
+            <img src="images/project-app-centegix.png" height="36" width="154" />
           </div>
         </a>
       </div>
-      <div class="mix web-sites misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-smartwash.png"
-                    height="36"
-                    width="144"
-            />
+            <img src="images/project-app-smartwash.png" height="36" width="144" />
           </div>
         </a>
       </div>
-      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-liveglam.png"
-                    height="66"
-                    width="174"
-            />
+            <img src="images/project-app-liveglam.png" height="66" width="174" />
           </div>
         </a>
       </div>
 
       <!--      6- Group-->
-      <div class="mix web-apps col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
             <img src="images/project-app-educate.png" height="34" width="152" />
           </div>
         </a>
       </div>
-      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-HighTimes.png"
-                    height="38"
-                    width="146"
-            />
+            <img src="images/project-app-HighTimes.png" height="38" width="146" />
           </div>
         </a>
       </div>
-      <div class="mix brands lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-rockout.png" height="40" width="166" />
         </div>
@@ -246,17 +210,13 @@
       <div class="mix mobile-apps web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-ombulabs.png"
-                    height="38"
-                    width="154"
-            />
+            <img src="images/project-app-ombulabs.png" height="38" width="154" />
           </div>
         </a>
       </div>
 
       <!--      7- Group-->
-      <div class="mix Misc lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps Misc lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-cl.png" height="50" width="158" />
         </div>
@@ -266,7 +226,7 @@
           <img src="images/project-app-MagicCo.png" height="34" width="136" />
         </div>
       </div>
-      <div class="mix brands web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-DTL.png" height="30" width="160" />
         </div>
@@ -278,27 +238,23 @@
       </div>
 
       <!--      8- Group-->
-      <div class="mix brands web-apps col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands web-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
             <img src="images/project-app-drool.png" height="38" width="110" />
           </div>
         </a>
       </div>
-      <div class="mix Misc col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps Misc col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
             <img src="images/project-app-lookup.png" height="39" width="129" />
           </div>
         </a>
       </div>
-      <div class="mix web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
-          <img
-                  src="images/project-app-schoolofrock.png"
-                  height="58"
-                  width="154"
-          />
+          <img src="images/project-app-schoolofrock.png" height="58" width="154" />
         </div>
       </div>
       <div class="mix mobile-apps brands lock-projects col-sm-6 col-md-4 col-lg-3">
@@ -308,7 +264,7 @@
       </div>
 
       <!--      9- Group-->
-      <div class="mix brands lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps brands lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-cleared.png" height="36" width="144" />
         </div>
@@ -316,32 +272,23 @@
       <div class="mix mobile-apps col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content ">
-            <img
-                    src="images/project-app-beauty-squar.png"
-                    height="96"
-                    width="74"
-            />
+            <img src="images/project-app-beauty-squar.png" height="96" width="74" />
           </div>
         </a>
       </div>
-      <div class="mix web-sites col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps web-sites col-sm-6 col-md-4 col-lg-3">
         <a href="#">
           <div class="content">
-            <img
-                    src="images/project-app-plannista.png"
-                    height="45"
-                    width="148"
-            />
+            <img src="images/project-app-plannista.png" height="45" width="148" />
           </div>
         </a>
       </div>
-      <div class="mix Misc lock-projects col-sm-6 col-md-4 col-lg-3">
+      <div class="mix mobile-apps Misc lock-projects col-sm-6 col-md-4 col-lg-3">
         <div class="content-locked ">
           <img src="images/project-app-last-wish.png" height="36" width="127" />
         </div>
       </div>
     </div>
-
   </div>
 </div>
 <!--End Project Involved-->
