--- a/src/template/pages/about/_client-opinion.html
+++ b/src/template/pages/about/_client-opinion.html
@@ -4,7 +4,7 @@
   <div class="content">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-lg-6">
+        <div class="col-md-8 col-lg-6 text-center text-sm-left">
 
           <h2 class="h3">
             “Gui is one of the most incredible, talented designers I’ve ever worked with. AMAZING.”
