--- a/src/template/components/_getting-touch.html
+++ b/src/template/components/_getting-touch.html
@@ -2,7 +2,7 @@
 <div id="contact-us" class="getting-touch">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-4 text-center text-md-left">
         <div class="h3 text-main-color">Getting touch</div>
         <h2>We’re looking forward to hear from you!</h2>
         <div class="div">
