--- a/src/template/components/_platform.html
+++ b/src/template/components/_platform.html
@@ -3,7 +3,7 @@
   <div class="platform">
     <div class="row justify-content-center align-items-end">
       <div class="col-sm">
-        <div class="upwork">
+        <div class="upwork mb-5 mb-sm-0">
           <div>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="col-sm">
-        <div class="gas">
+        <div class="gas mb-5 mb-sm-0">
           <img src="images/GAS.png" class="mb-3" height="48" width="142" />
           <div class="span">
             Inside the Mind of
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="col-sm">
-        <div class="insight">
+        <div class="insight mb-5 mb-sm-0">
           <img src="images/insight.png" class="mb-4" height="33" width="171" />
           <div class="span">
             10 Leaders to Watch
