--- a/src/template/pages/home/_user-interface.html
+++ b/src/template/pages/home/_user-interface.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="user-interface">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 text-center text-sm-left">
         <h2>User Interface Design for mobile apps, softwares and web sites.</h2>
         <p>17 years of experience, delivering
            nothing but the best.
