fix issue mobile device

--- a/src/scss/components/_home-slider.scss
+++ b/src/scss/components/_home-slider.scss
@@ -17,7 +17,7 @@
     height: $height-img * $ratio-sm;
   }
   @media (max-width: $max-xs) {
-    background: none;
+    //background: none;
   }
 
   .container{
