--- a/src/template/pages/home/_home-slider.html
+++ b/src/template/pages/home/_home-slider.html
@@ -2,7 +2,7 @@
 <!--<div class="container-fluid">-->
 <div class="home-slider">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row align-items-start align-items-sm-center">
       <div class="col-sm-6 col-md-6">
         <div id="home-slider" class="carousel slide" data-ride="carousel">
           <!--        Control Slider-->
